Changed AC to DC

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="calculator">
         <input type="text" id="inputBox" placeholder="0" />
         <div>
-          <button class="button operator">AC</button>
+          <button class="button operator">DC</button>
           <button class="button operator">DEL</button>
           <button class="button operator">%</button>
           <button class="button operator">/</button>
